--- a/Cancer.ipynb
+++ b/Cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "0eb8b5bd-c947-4bfd-97b0-6b647da52c4e",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main d904c5c] test commit\n",
-      " 2 files changed, 14 insertions(+), 20 deletions(-)\n",
-      "Enumerating objects: 31, done.\n",
-      "Counting objects: 100% (28/28), done.\n",
-      "Delta compression using up to 8 threads\n",
-      "Compressing objects: 100% (21/21), done.\n",
-      "Writing objects:  47% (11/23), 128.61 MiB | 8.54 MiB/s\r"
+      "shell-init: error retrieving current directory: getcwd: cannot access parent directories: No such file or directory\n",
+      "fatal: Unable to read current working directory: No such file or directory\n",
+      "shell-init: error retrieving current directory: getcwd: cannot access parent directories: No such file or directory\n",
+      "fatal: Unable to read current working directory: No such file or directory\n",
+      "shell-init: error retrieving current directory: getcwd: cannot access parent directories: No such file or directory\n",
+      "fatal: Unable to read current working directory: No such file or directory\n"
      ]
     }
    ],
@@ -38,24 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "ebe90084-1cfc-424b-938a-7935df608877",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-03-22 15:13:08.762622: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-03-22 15:13:08.762749: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-03-22 15:13:08.916739: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-03-22 15:13:09.276976: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -83,6 +70,44 @@
     "input_directory = \"/kaggle/input/histopathologic-cancer-detection/\"\n",
     "working_directory = \"/kaggle/working/\"\n",
     "tmp_directory = \"/kaggle/temp\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8f46fe24-6253-4624-b3aa-2931a024c691",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def download_file(url, folder_path, local_filename):\n",
+    "    # Make a request to the URL\n",
+    "    response = requests.get(url)\n",
+    "    response.raise_for_status()  # Raise an error for bad responses\n",
+    "\n",
+    "    # Create the full path to the file\n",
+    "    file_path = os.path.join(folder_path, local_filename)\n",
+    "\n",
+    "    # Write the file content in binary mode to the specified folder\n",
+    "    with open(file_path, 'wb') as file:\n",
+    "        file.write(response.content)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcf960dc-fdd1-41bd-9fff-482ea893d3a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Download Kaggle File\n",
+    "url = 'https://storage.googleapis.com/isaac_blach_ml_storage/histopathologic-cancer-detection.zip'\n",
+    "folder_path = input_directory\n",
+    "local_filename = 'histopathologic-cancer-detection.zip'\n",
+    "\n",
+    "download_file(url, folder_path, local_filename)"
    ]
   },
   {
@@ -163,24 +188,7 @@
     }
    ],
    "source": [
-    "def download_file(url, folder_path, local_filename):\n",
-    "    # Make a request to the URL\n",
-    "    response = requests.get(url)\n",
-    "    response.raise_for_status()  # Raise an error for bad responses\n",
     "\n",
-    "    # Create the full path to the file\n",
-    "    file_path = os.path.join(folder_path, local_filename)\n",
-    "\n",
-    "    # Write the file content in binary mode to the specified folder\n",
-    "    with open(file_path, 'wb') as file:\n",
-    "        file.write(response.content)\n",
-    "\n",
-    "#Download Kaggle File\n",
-    "url = 'https://storage.googleapis.com/isaac_blach_ml_storage/histopathologic-cancer-detection.zip'\n",
-    "folder_path = input_directory\n",
-    "local_filename = 'histopathologic-cancer-detection.zip'\n",
-    "\n",
-    "download_file(url, folder_path, local_filename)\n",
     "\n",
     "directory = input_directory + \"train_labels.csv\"\n",
     "images = pd.read_csv(directory)\n",
@@ -453,16 +461,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "eee7d47d-598f-4f80-a2a2-1c28d22ba67a",
-   "metadata": {},
-   "source": [
-    "## Expanding the training set\n",
-    "\n",
-    "A good pratice in trianing image data is to rotate and shift the training set to create a better and more complete training set.  In researching this problem, just rotating all the images can create a 5% increase in accuracy if properly tuned."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "2e810125-d912-4c83-8329-0f99e8bc9659",
@@ -476,31 +474,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "a2f79f46-c6fa-48e6-b32e-56912be92b51",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(220025, 32, 32, 3)\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "eee7d47d-598f-4f80-a2a2-1c28d22ba67a",
+   "metadata": {},
    "source": [
-    "print(X.shape)"
+    "## Expanding the training set\n",
+    "\n",
+    "A good pratice in trianing image data is to rotate and shift the training set to create a better and more complete training set.  In researching this problem, just rotating all the images can create a 5% increase in accuracy if properly tuned."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "98d2ba80-f382-48ef-ad63-4b3b5b8fc41b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/kaggle/working/image_data.bz2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m folder_path \u001b[38;5;241m=\u001b[39m working_directory\n\u001b[1;32m      4\u001b[0m local_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mimage_data.bz2\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 6\u001b[0m \u001b[43mdownload_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfolder_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlocal_filename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m#unbz2 images for git storage\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m bz2\u001b[38;5;241m.\u001b[39mopen(working_directory \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimage_data.bz2\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m compressed_file:\n",
+      "Cell \u001b[0;32mIn[15], line 10\u001b[0m, in \u001b[0;36mdownload_file\u001b[0;34m(url, folder_path, local_filename)\u001b[0m\n\u001b[1;32m      7\u001b[0m file_path \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(folder_path, local_filename)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# Write the file content in binary mode to the specified folder\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mwb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     11\u001b[0m     file\u001b[38;5;241m.\u001b[39mwrite(response\u001b[38;5;241m.\u001b[39mcontent)\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/IPython/core/interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    304\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    305\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    306\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    308\u001b[0m     )\n\u001b[0;32m--> 310\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/kaggle/working/image_data.bz2'"
+     ]
+    }
+   ],
    "source": [
     "# Download images non-rotated\n",
     "url = 'https://storage.googleapis.com/isaac_blach_ml_storage/image_data.bz2'\n",
@@ -518,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c1625c45-4350-4b3b-ad9f-e9b609fb18c1",
    "metadata": {
     "tags": []
