--- a/Cancer.ipynb
+++ b/Cancer.ipynb
@@ -2,6 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5adf0458-4a96-4712-93b8-41599983f47a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main b4825ce] blue\n",
+      " 1 file changed, 403 insertions(+), 29 deletions(-)\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
+      "Delta compression using up to 64 threads\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects:  66% (2/3)\r"
+     ]
+    }
+   ],
+   "source": [
+    "!git add .\n",
+    "!git config --global user.email \"you@example.com\"\n",
+    "!git config --global user.name \"Your Name\"\n",
+    "!git commit -m \"blue\"\n",
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "223ca73e-b2b3-4540-b19b-2da6d2be984f",
    "metadata": {},
