--- a/Cancer.ipynb
+++ b/Cancer.ipynb
@@ -2,20 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5adf0458-4a96-4712-93b8-41599983f47a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git add .\n",
-    "!git config --global user.email \"you@example.com\"\n",
-    "!git config --global user.name \"Your Name\"\n",
-    "!git commit -m \"blue\"\n",
-    "!git push"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "223ca73e-b2b3-4540-b19b-2da6d2be984f",
    "metadata": {},
@@ -83,9 +69,9 @@
     }
    ],
    "source": [
-    "!pip install pandas\n",
-    "!pip install pillow\n",
-    "!pip install matplotlib"
+    "#!pip install pandas\n",
+    "#!pip install pillow\n",
+    "#!pip install matplotlib"
    ]
   },
   {
@@ -2808,8 +2794,16 @@
     "# Lessons learned\n",
     "- Use a powerfull enough computer to do training with plenty of memory\n",
     "- Next time, I will use pytorch.  Pytorch does not seem to suffer from the memory leak and comes with a system called raytune, which will automagically find the optimal hyperparameters.\n",
-    "- Be faster.  I learned alot about the computing and my mistakes.  This turned into a 36 hour project, "
+    "- Be faster.  I learned alot about the computing and my mistakes.  This turned into a 36 hour project, but was a fun learning expirence."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbc8cc53-779e-427b-82ba-3bdaf0efce75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
